--- a/views/CadTrue.html
+++ b/views/CadTrue.html
@@ -17,7 +17,7 @@
 					<div class="d-grid gap-2">
 						<br>
 				  		<h4>Cadastro realizado com Sucesso!!!</h4>
-						<a href="#" class="btn bg-login btn-lg">Ver Status Demandas</a>
+						<a href="../projetotesteanderson.html" class="btn bg-login btn-lg">Ver Status Demandas</a>
 						<a href="../home.html" class="btn bg-login btn-lg">Inicio</a>
 					</div>
 			<div class="col-md-4"></div>
