--- a/views/CadDemanda.html
+++ b/views/CadDemanda.html
@@ -7,6 +7,41 @@
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/estilo.css">
 
+	<!-- verifica numero celular e valido -->
+	<script>
+        function validarNumeroCelular(input) {
+        const numeroCelular = input.value.replace(/[^\d]/g, ''); // Remove caracteres não numéricos
+    	}
+
+    // Função para formatar o número de celular
+    function autoFormatarCNPJ(input) {
+        const unformatted = input.value.replace(/[^\d]/g, ''); // Remove caracteres não numéricos
+
+        if (unformatted.length >= 2) {
+            input.value = `(${unformatted.slice(0, 2)}`;
+        }
+
+        if (unformatted.length > 2) {
+            input.value += `) ${unformatted.slice(2)}`;
+        }
+
+        if (unformatted.length > 7) {
+            input.value = `${input.value.slice(0, 10)}-${unformatted.slice(7)}`;
+        }
+    }
+
+		// Adiciona um evento de escuta (event listener) para validar o número de celular
+		const numeroCelularInput = document.getElementById("inputNumeroCelular");
+		numeroCelularInput.addEventListener("blur", function() {
+			validarNumeroCelular(this);
+		});
+
+		// Adiciona um evento de escuta (event listener) para formatar o número de celular enquanto o usuário digita
+		numeroCelularInput.addEventListener("input", function() {
+			autoFormatarCNPJ(this);
+		});
+	</script>
+
 	<style>
 		.body{
 			background-color: #00e88f
@@ -18,7 +53,7 @@
 	<section>
 		<nav class="navbar navbar-dark bg-dark">
 		  	<a class="navbar-brand mr-auto" href="../home.html">
-				<img src="logoDescohorizontal.png" style="padding-left: 10%;" width="300" height="45" >
+				<img src="img/logoDescohorizontal.png" style="padding-left: 10%;" width="300" height="45" >
 		  	</a>
 		</nav>
 	</section>
@@ -27,13 +62,13 @@
 		<div class="row col-md-12">
 			<div class="col-md-4"></div>
 			<div class="col-md-4 cadastro">
-				<form>
+				<form action="Cadtrue.html">
 					<br>
 					<h3>Etapa 2 - Cadastro de Demanda</h3>
 					<br>
 					<div class="form-group">
 					  	<label for="inputCliente">Cliente:</label>
-					  	<input type="text" class="form-control" id="inputCliente" placeholder="Digite o Nome do Cliente">
+					  	<input type="text" class="form-control" id="inputCliente" placeholder="Digite o Nome do Cliente" required oninput="this.value = this.value.replace(/[^A-Za-z\s]/g, '');">
 					</div>
 					<br>
 					<div class="form-group">
@@ -43,28 +78,28 @@
 					<br>
 					<div class="form-group">
 					  	<label for="inputDescricao">Descrição Breve do Projeto:</label>
-					  	<textarea class="form-control" id="inputDescricao" placeholder="Descreva brevemente o projeto"></textarea>
+					  	<textarea class="form-control" id="inputDescricao" placeholder="Descreva brevemente o projeto" required></textarea>
 					</div>
 					<br>
 					<div class="form-group">
 					  	<label for="inputMentor">Nome do Mentor:</label>
-					  	<input type="text" class="form-control" id="inputMentor" placeholder="jesus de jesus ">
+					  	<input type="text" class="form-control" id="inputMentor" placeholder="jesus de jesus " required oninput="this.value = this.value.replace(/[^A-Za-z\s]/g, '');">
 					</div>
 					<br>
 					<div class="form-group">
 					  	<label for="inputEmailMentor">Email do Mentor:</label>
-					  	<input type="email" class="form-control" id="inputEmailMentor" placeholder="xxxxxxxxx@gmail.comr">
+					  	<input type="email" class="form-control" id="inputEmailMentor" placeholder="xxxxxxxxx@gmail.comr" required>
 					</div>
 					<br>
 					<div class="form-group">
 						<label for="inputNumeroCelular">Número de Celular:</label>
-						<input type="tel" class="form-control" id="inputNumeroCelular" placeholder="(XX) XXXXX-XXXX">
+						<input type="tel" class="form-control" id="inputNumeroCelular" maxlength="15" placeholder="(XX) XXXXX-XXXX" required onblur="validarNumeroCelular(this);" oninput="autoFormatarCNPJ(this);" oninput="this.value = this.value.replace(/[^0-9]/g, '');" >
 						<small class="form-text text-muted">Informe o número de celular no formato (XX) XXXXX-XXXX.</small>
 					</div>	
 					<br>				  
 					<div class="form-group">
-					  	<label for="inputExplicacao">Explicação detalhada sobre a Demanda:</label>
-					  	<textarea class="form-control" id="inputExplicacao" placeholder="Explicacao detalhada"></textarea>
+					  	<label for="inputExplicacao" >Explicação detalhada sobre a Demanda:</label>
+					  	<textarea class="form-control" id="inputExplicacao" placeholder="Explicacao detalhada..." ></textarea>
 					</div>
 					<br>
 					<div class="form-group">
@@ -74,8 +109,7 @@
 					</div>				
 					<br>	  
 					<div class="d-grid gap-2 col-6 mx-auto">
-						<a class="btn btn-primary" href="Cadtrue.html"role="button">Enviar e Finalizar</a>
-						<a class="btn btn-primary" href="CadFalse.html"role="button">Enviar e Finalizar</a>
+						<button type="submit" class="btn btn-primary" >Enviar e Finalizar </button>
 					</div>
 					<br><br><br>
 				  </form>											  
