--- a/views/CadTrue.html
+++ b/views/CadTrue.html
@@ -13,11 +13,11 @@
 		<div class="row col-md-12">
 			<div class="col-md-4"></div>
 			<div class="col-md-4 login">
-				<h1 class="text-center text-primary" href="../home.html"><img src="../logoUni.png"> </h1>
+				<h1 class="text-center text-primary" href="../home.html"><img src="img/logoUni.png"> </h1>
 					<div class="d-grid gap-2">
 						<br>
 				  		<h4>Cadastro realizado com Sucesso!!!</h4>
-						<a href="../projetotesteanderson.html" class="btn bg-login btn-lg">Ver Status Demandas</a>
+						<a href="#" class="btn bg-login btn-lg">Ver Status Demandas</a>
 						<a href="../home.html" class="btn bg-login btn-lg">Inicio</a>
 					</div>
 			<div class="col-md-4"></div>
