--- a/views/CadEmpresa.html
+++ b/views/CadEmpresa.html
@@ -32,7 +32,7 @@
     var resultado = soma % 11 < 2 ? 0 : 11 - (soma % 11);
 
     if (resultado != digitos.charAt(0)) {
-        alert("CNPJ inválido. Dígitos verificadores não conferem.");
+        /*alert("CNPJ inválido. Dígitos verificadores não conferem.");*/
         return;
     }
 
