--- a/views/CadFalse.html
+++ b/views/CadFalse.html
@@ -16,7 +16,7 @@
 					<div class="d-grid gap-2">
 						<br>
 				  		<h4>Cadastro nao realizado!!!</h4>
-                        <h6>refaca o cadastro se o problema persistir entre em contato com o email: xxxxxx@gmail.com</h6>
+                        <h6>Refaça o cadastro se o problema persistir entre em contato com o email: xxxxxx@gmail.com</h6>
 						<br>
 						<a href="CadEmpresa.html" class="btn bg-login btn-lg">Cadastrar demandas</a>
 						<a href="../home.html" class="btn bg-login btn-lg">Inicio</a>
