--- a/views/CadEmpresa.html
+++ b/views/CadEmpresa.html
@@ -11,49 +11,49 @@
 	<!--Verifica CNPJ se é valido-->
 	<script>
 		function validarCNPJ(cnpj) {
-    cnpj = cnpj.replace(/[^\d]+/g, ''); // Remove caracteres não numéricos
+		cnpj = cnpj.replace(/[^\d]+/g, ''); // Remove caracteres não numéricos
 
-    if (cnpj.length !== 14) {
-        alert("CNPJ inválido. Deve conter 14 dígitos.");
-        return;
-    }
-
-    var tamanho = cnpj.length - 2;
-    var numeros = cnpj.substring(0, tamanho);
-    var digitos = cnpj.substring(tamanho);
-    var soma = 0;
-    var pos = tamanho - 7;
-
-    for (var i = tamanho; i >= 1; i--) {
-        soma += numeros.charAt(tamanho - i) * pos--;
-        if (pos < 2) pos = 9;
-    }
-
-    var resultado = soma % 11 < 2 ? 0 : 11 - (soma % 11);
-
-    if (resultado != digitos.charAt(0)) {
-        /*alert("CNPJ inválido. Dígitos verificadores não conferem.");*/
-        return;
-    }
-
-    tamanho = tamanho + 1;
-    numeros = cnpj.substring(0, tamanho);
-    soma = 0;
-    pos = tamanho - 7;
-
-    for (var i = tamanho; i >= 1; i--) {
-        soma += numeros.charAt(tamanho - i) * pos--;
-        if (pos < 2) pos = 9;
-    }
-
-    resultado = soma % 11 < 2 ? 0 : 11 - (soma % 11);
-
-		if (resultado != digitos.charAt(1)) {
-			alert("CNPJ inválido. Dígitos verificadores não conferem.");
+		if (cnpj.length !== 14) {
+			alert("CNPJ inválido. Deve conter 14 dígitos.");
 			return;
 		}
-		alert("CNPJ válido.");
-	}
+
+		var tamanho = cnpj.length - 2;
+		var numeros = cnpj.substring(0, tamanho);
+		var digitos = cnpj.substring(tamanho);
+		var soma = 0;
+		var pos = tamanho - 7;
+
+		for (var i = tamanho; i >= 1; i--) {
+			soma += numeros.charAt(tamanho - i) * pos--;
+			if (pos < 2) pos = 9;
+		}
+
+		var resultado = soma % 11 < 2 ? 0 : 11 - (soma % 11);
+
+		if (resultado != digitos.charAt(0)) {
+			/*alert("CNPJ inválido. Dígitos verificadores não conferem.");*/
+			return;
+		}
+
+		tamanho = tamanho + 1;
+		numeros = cnpj.substring(0, tamanho);
+		soma = 0;
+		pos = tamanho - 7;
+
+		for (var i = tamanho; i >= 1; i--) {
+			soma += numeros.charAt(tamanho - i) * pos--;
+			if (pos < 2) pos = 9;
+		}
+
+		resultado = soma % 11 < 2 ? 0 : 11 - (soma % 11);
+
+			if (resultado != digitos.charAt(1)) {
+				alert("CNPJ inválido. Dígitos verificadores não conferem.");
+				return;
+			}
+			alert("CNPJ válido.");
+		}
 	</script>
 
 	<!-- formatacao pontos e barras cnpj -->
@@ -179,7 +179,7 @@
 	<!-- estilo css interno -->
 	<style>
 		.body{
-			background-color: #00e88f
+			background-color: #00e88f90
 		}
 
 	</style>
@@ -294,8 +294,3 @@
 
 </body>
 </html>
-
-<a href="views/CadEmpresa.html" class="btn bg-login btn-lg">Cadastrar demandas </a>
-				  		<a href="projetotesteanderson.html" class="btn bg-login btn-lg">Status demandas cadastradas</a>
-						<a href="login.html" class="btn bg-login btn-lg">Acesso Uniamerica</a>
-						<a href="login-aluno.html" class="btn bg-login btn-lg">Acesso Estudante</a>
