--- a/views/CadTrue.html
+++ b/views/CadTrue.html
@@ -8,11 +8,11 @@
 	<link rel="stylesheet" type="text/css" href="css/estilo.css">
 </head>
 <!--login -->
-<body style="background-repeat: no-repeat; background: linear-gradient(rgba(25, 26, 26, 0.99), rgba(25, 26, 26, 0.85), rgba(25, 26, 26, 0.85), rgb(25, 26, 26)),url(img/image.jpeg) "	>
+<body style="background-repeat: no-repeat; background: linear-gradient(rgba(25, 26, 26, 0.95), rgba(25, 26, 26, 0.95), rgba(25, 26, 26, 0.95), rgb(25, 26, 26)),url(img/image.jpeg) "	>
 	<section>
 		<nav class="navbar navbar-expand-lg navbar-dark bg-grey">
 			<div class="container-fluid">
-			  <a class="navbar-brand" href="Home.html">
+			  <a class="navbar-brand" href="../Home.html">
 				<img src="img/logoDescohorizontal.png" style="padding-left: 20%;" width="310" height="45" alt="Logo">
 			  </a>
 			  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -21,7 +21,7 @@
 			  <div class="collapse navbar-collapse" id="navbarNav" style="padding-left: 15%;" width="500" height="50" alt="btn">
 				<ul class="navbar-nav ">
 				  <li class="nav-item">
-					<button type="button" onclick="location.href='Home.html'" class="nav-link" >Cadastrar demandas</button>
+					<button type="button" onclick="location.href='../Home.html'" class="nav-link" >Cadastrar demandas</button>
 				  </li>
 				  <li class="nav-item">
 					<button type="button" onclick="location.href='views/projetotesteanderson.html'" class="nav-link" >Status demandas cadastradas</button>
@@ -42,12 +42,12 @@
 		<div class="row col-md-12">
 			<div class="col-md-4"></div>
 			<div class="col-md-4 login" style="background-color: #ffffffdc;">
-				<h1 class="text-center text-primary" href="views/Home.html"><img src="img/logoUni.png"> </h1>
+				<h1 class="text-center text-primary" href="../Home.html"><img src="img/logoUni.png"> </h1>
 					<div class="d-grid gap-2" >
 						<br>
 				  		<h4 style="text-align: center;  font-family: sans-serif; " >Cadastro realizado com Sucesso!!!</h4>
 						<a href="#" class="btn bg-login fonte-input btn-lg">Ver Status Demandas</a>
-						<a href="views/Home.html" class="btn bg-login fonte-input btn-lg">Inicio</a>
+						<a href="../Home.html" class="btn bg-login fonte-input btn-lg">Inicio</a>
 					</div>
 			<div class="col-md-4" ></div>
 		</div>
