--- a/views/CadTrue.html
+++ b/views/CadTrue.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="css/estilo.css">
 </head>
 <!--login -->
-<body style="background-repeat: no-repeat; background: linear-gradient(rgba(25, 26, 26, 0.95), rgba(25, 26, 26, 0.95), rgba(25, 26, 26, 0.95), rgb(25, 26, 26)),url(img/image.jpeg) "	>
+<body style="background-repeat: no-repeat; background: linear-gradient(rgba(25, 26, 26, 0.80), rgba(25, 26, 26, 0.80), rgba(25, 26, 26, 0.80)),url(img/vucahorizontal.jpeg); background-size: 1690px; "	>
 	<section>
 		<nav class="navbar navbar-expand-lg navbar-dark bg-grey">
 			<div class="container-fluid">
